--- a/src/br/ufrpe/zoologico/gui/grafica/FXML/JaulaTipoIII.fxml
+++ b/src/br/ufrpe/zoologico/gui/grafica/FXML/JaulaTipoIII.fxml
@@ -1,87 +1,53 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity"
-	minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0"
-	prefWidth="1280.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.ufrpe.zoologico.gui.grafica.controller.GerenciarJaulaAnimalController">
 	<children>
-		<TableView layoutX="50.0" layoutY="109.0" prefHeight="338.0"
-			prefWidth="497.0">
+		<TableView fx:id="tabelaAnimal" layoutX="695.0" layoutY="109.0" onMouseClicked="#selecionarAnimal" prefHeight="194.0" prefWidth="497.0">
 			<columns>
-				<TableColumn prefWidth="43.0" text="ID" />
-				<TableColumn prefWidth="159.0" text="TIPO" />
-				<TableColumn prefWidth="57.0" text="STATUS" />
-				<TableColumn prefWidth="113.0" text="POPULAÇÂO MAX" />
-				<TableColumn prefWidth="48.0" text="ID ZOO" />
-				<TableColumn prefWidth="75.0" text="ULT INSP" />
+				<TableColumn fx:id="colunaIdAnimal" prefWidth="75.0" text="ID" />
+				<TableColumn fx:id="colunaNomeAnimal" prefWidth="75.0" text="NOME" />
+				<TableColumn fx:id="colunaIdadeAnimal" prefWidth="75.0" text="IDADE" />
+				<TableColumn fx:id="colunaGeneroAnimal" prefWidth="120.0" text="GÊNERO" />
+				<TableColumn fx:id="colunaOrdemAnimal" prefWidth="75.0" text="ORDEM" />
+				<TableColumn fx:id="colunaEspecieAnimal" prefWidth="75.0" text="ESPÉCIE" />
 			</columns>
 		</TableView>
-		<TableView layoutX="713.0" layoutY="109.0" prefHeight="338.0"
-			prefWidth="497.0">
+		<TableView fx:id="tabelaJaulas" layoutX="50.0" layoutY="109.0" onMouseClicked="#selecionarJaula" prefHeight="305.0" prefWidth="497.0">
 			<columns>
-				<TableColumn prefWidth="75.0" text="ID" />
-				<TableColumn prefWidth="75.0" text="NOME" />
-				<TableColumn prefWidth="75.0" text="IDADE" />
-				<TableColumn prefWidth="120.0" text="GÊNERO" />
-				<TableColumn prefWidth="75.0" text="ORDEM" />
-				<TableColumn prefWidth="75.0" text="ESPÉCIE" />
+				<TableColumn fx:id="colunaIdJaula" prefWidth="43.0" text="ID" />
+				<TableColumn fx:id="colunaTipoJaula" prefWidth="159.0" text="TIPO" />
+				<TableColumn fx:id="colunaStatusJaula" prefWidth="57.0" text="STATUS" />
+				<TableColumn fx:id="colunaPopMaxJaula" prefWidth="113.0" text="POPULAÇÂO MAX" />
+				<TableColumn fx:id="colunaIdZooJaula" prefWidth="48.0" text="ID ZOO" />
+				<TableColumn fx:id="colunaUltimaInspecJaula" prefWidth="76.0" text="ULT INSP" />
 			</columns>
 		</TableView>
-		<Button layoutX="286.0" layoutY="620.0" mnemonicParsing="false"
-			onAction="#voltar" text="Voltar">
-			<font>
-				<Font size="36.0" />
-			</font>
-		</Button>
-		<Button layoutX="60.0" layoutY="620.0" mnemonicParsing="false"
-			onAction="#buscar" prefHeight="77.0" prefWidth="180.0" text="Buscar">
-			<font>
-				<Font size="36.0" />
-			</font>
-		</Button>
-		<Label layoutX="50.0" layoutY="463.0" prefHeight="45.0"
-			prefWidth="236.0" text="Id do Zoologico:">
-			<font>
-				<Font size="30.0" />
-			</font>
-		</Label>
-		<TextField fx:id="idZoo" layoutX="312.0" layoutY="459.0"
-			prefHeight="8.0" prefWidth="71.0" promptText="ID">
-			<font>
-				<Font size="25.0" />
-			</font>
-		</TextField>
-		<Label layoutX="50.0" layoutY="528.0" prefHeight="45.0"
-			prefWidth="236.0" text="Cpf do tratador:">
-			<font>
-				<Font size="30.0" />
-			</font>
-		</Label>
-		<TextField fx:id="tratador" layoutX="312.0" layoutY="528.0"
-			prefHeight="45.0" prefWidth="180.0" promptText="CPF">
-			<font>
-				<Font size="25.0" />
-			</font>
-		</TextField>
-		<Label layoutX="422.0" layoutY="463.0" prefHeight="45.0"
-			prefWidth="156.0" text="Id da Jaula:">
-			<font>
-				<Font size="30.0" />
-			</font>
-		</Label>
-		<TextField fx:id="idJaula" layoutX="578.0" layoutY="459.0"
-			prefHeight="8.0" prefWidth="71.0" promptText="ID">
-			<font>
-				<Font size="25.0" />
-			</font>
-		</TextField>
+      <Button layoutX="842.0" layoutY="339.0" mnemonicParsing="false" onAction="#trocarDeJaula" text="Trocar Animal de Jaula">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Button>
+      <Button layoutX="864.0" layoutY="630.0" mnemonicParsing="false" onAction="#salvarAlteracoes" text="Salvar Alterações">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Button>
+      <TableView fx:id="tabelaNovaJaula" layoutX="802.0" layoutY="406.0" onMouseClicked="#selecionarNovaJaula" prefHeight="200.0" prefWidth="284.0">
+        <columns>
+          <TableColumn fx:id="colunaIdNovaJaula" prefWidth="75.0" text="ID Jaula" />
+          <TableColumn fx:id="colunaTipoNovaJaula" prefWidth="208.0" text="Tipo" />
+        </columns>
+      </TableView>
+      <Button cancelButton="true" layoutX="1128.0" layoutY="36.0" mnemonicParsing="false" onAction="#voltar" text="Voltar">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Button>
 	</children>
 </AnchorPane>
