--- a/src/br/ufrpe/zoologico/gui/grafica/FXML/GerenciarReserva.fxml
+++ b/src/br/ufrpe/zoologico/gui/grafica/FXML/GerenciarReserva.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.ufrpe.zoologico.gui.grafica.controller.GerenciarReservasController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.ufrpe.zoologico.gui.grafica.controller.GerenciarReservasController">
    <children>
       <TabPane prefHeight="720.0" prefWidth="1280.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <tabs>
@@ -258,6 +258,17 @@
                               <Font size="24.0" />
                            </font>
                         </Button>
+                        <TableView fx:id="tabelaFatura" layoutX="968.0" layoutY="214.0" onMouseClicked="#selecionarEspaco" prefHeight="145.0" prefWidth="289.0">
+                           <columns>
+                              <TableColumn fx:id="colunaIdFatura" prefWidth="144.51031494140625" text="ID" />
+                              <TableColumn fx:id="colunaValorFatura" prefWidth="143.4897003173828" text="Valor" />
+                           </columns>
+                        </TableView>
+                        <Label fx:id="faturaLabel" layoutX="1062.0" layoutY="155.0" text="Fatura">
+                           <font>
+                              <Font size="36.0" />
+                           </font>
+                        </Label>
                      </children>
                   </AnchorPane>
                </content>
