--- a/src/br/ufrpe/zoologico/gui/grafica/FXML/JaulaTipoIII.fxml
+++ b/src/br/ufrpe/zoologico/gui/grafica/FXML/JaulaTipoIII.fxml
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.ufrpe.zoologico.gui.grafica.controller.GerenciarJaulaAnimalController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.ufrpe.zoologico.gui.grafica.controller.GerenciarJaulaAnimalController">
 	<children>
-		<TableView fx:id="tabelaAnimal" layoutX="695.0" layoutY="109.0" onMouseClicked="#selecionarAnimal" prefHeight="194.0" prefWidth="497.0">
+		<TableView fx:id="tabelaAnimal" layoutX="695.0" layoutY="69.0" onMouseClicked="#selecionarAnimal" prefHeight="305.0" prefWidth="497.0">
 			<columns>
 				<TableColumn fx:id="colunaIdAnimal" prefWidth="75.0" text="ID" />
 				<TableColumn fx:id="colunaNomeAnimal" prefWidth="75.0" text="NOME" />
@@ -18,7 +23,7 @@
 				<TableColumn fx:id="colunaEspecieAnimal" prefWidth="75.0" text="ESPÉCIE" />
 			</columns>
 		</TableView>
-		<TableView fx:id="tabelaJaulas" layoutX="50.0" layoutY="109.0" onMouseClicked="#selecionarJaula" prefHeight="305.0" prefWidth="497.0">
+		<TableView fx:id="tabelaJaulas" layoutX="49.0" layoutY="62.0" onMouseClicked="#selecionarJaula" prefHeight="305.0" prefWidth="497.0">
 			<columns>
 				<TableColumn fx:id="colunaIdJaula" prefWidth="43.0" text="ID" />
 				<TableColumn fx:id="colunaTipoJaula" prefWidth="159.0" text="TIPO" />
@@ -28,25 +33,46 @@
 				<TableColumn fx:id="colunaUltimaInspecJaula" prefWidth="76.0" text="ULT INSP" />
 			</columns>
 		</TableView>
-      <Button layoutX="842.0" layoutY="339.0" mnemonicParsing="false" onAction="#trocarDeJaula" text="Trocar Animal de Jaula">
+      <Button layoutX="669.0" layoutY="650.0" mnemonicParsing="false" onAction="#salvarAlteracoes" text="Salvar Alterações">
          <font>
             <Font size="18.0" />
          </font>
       </Button>
-      <Button layoutX="864.0" layoutY="630.0" mnemonicParsing="false" onAction="#salvarAlteracoes" text="Salvar Alterações">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Button>
-      <TableView fx:id="tabelaNovaJaula" layoutX="802.0" layoutY="406.0" onMouseClicked="#selecionarNovaJaula" prefHeight="200.0" prefWidth="284.0">
+      <TableView fx:id="tabelaNovaJaula" disable="true" layoutX="385.0" layoutY="433.0" onMouseClicked="#selecionarNovaJaula" prefHeight="200.0" prefWidth="284.0" visible="false">
         <columns>
           <TableColumn fx:id="colunaIdNovaJaula" prefWidth="75.0" text="ID Jaula" />
           <TableColumn fx:id="colunaTipoNovaJaula" prefWidth="208.0" text="Tipo" />
         </columns>
       </TableView>
-      <Button cancelButton="true" layoutX="1128.0" layoutY="36.0" mnemonicParsing="false" onAction="#voltar" text="Voltar">
+      <Button cancelButton="true" layoutX="1126.0" layoutY="14.0" mnemonicParsing="false" onAction="#voltar" text="Voltar">
          <font>
             <Font size="24.0" />
+         </font>
+      </Button>
+      <DatePicker fx:id="dtFale" layoutX="36.0" layoutY="516.0" prefHeight="34.0" prefWidth="231.0" promptText="Data de Falecimento" visible="false" />
+      <Label fx:id="textNome" layoutX="51.0" layoutY="432.0" prefHeight="45.0" prefWidth="100.0" text="Nome:" visible="false">
+         <font>
+            <Font size="30.0" />
+         </font>
+      </Label>
+      <TextField fx:id="nome" disable="true" layoutX="178.0" layoutY="428.0" prefHeight="54.0" prefWidth="100.0" promptText="Nome" visible="false">
+         <font>
+            <Font size="25.0" />
+         </font>
+      </TextField>
+      <TextArea fx:id="obs" disable="true" layoutX="49.0" layoutY="571.0" prefHeight="118.0" prefWidth="231.0" promptText="OBSERVAÇÃO" visible="false">
+         <font>
+            <Font size="19.0" />
+         </font>
+      </TextArea>
+      <Text fx:id="textAltAnimal" layoutX="76.0" layoutY="413.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Alterar Animal" visible="false">
+         <font>
+            <Font size="32.0" />
+         </font>
+      </Text>
+      <Button fx:id="altAnimalSelec" layoutX="385.0" layoutY="650.0" mnemonicParsing="false" onAction="#altAnimalSelec" text="Alterar Animal Selecionado">
+         <font>
+            <Font size="18.0" />
          </font>
       </Button>
 	</children>
